[package]
name = "ezlua"
version = "0.3.2"
edition = "2021"
license = "MIT"
authors = ["metaworm <metaworm@outlook.com>"]
description = "Ergonomic, efficient and Zero-cost rust bindings to Lua5.4"
homepage = "https://crates.io/crates/ezlua"
documentation = "https://docs.rs/ezlua"
repository = "https://github.com/metaworm/ezlua"
keywords = ["lua", "scripting", "nostd", "async"]
categories = ["api-bindings", "no-std"]

[features]
default = ['std', 'vendored', 'log', 'serde']
vendored = ['lua-src']
thread = ['std', 'vendored']
json = ['serde_json', 'serde']
std = ['bitflags']
unsafe_send_sync = []
async = ['unsafe_send_sync']
compat = []

[dependencies]
libc = '0.2' 
glob = '0.3'
extend = "1.1"
derive_more = '0.99'
serde-transcode = '1'
cstr_core = '0.2'
log = {version = '0.4', optional = true}
regex = {version = '1.5', optional = true}
bitflags = {version = '2', optional = true}
parking_lot = {version = '0.12', optional = true}
serde_json = {version = "1", optional = true}
serde_bytes = {version = '0.11', optional = true}
serde = {version = '1.0', default-features = false, features = ['rc', 'derive'], optional = true}

[dev-dependencies]
serde_json = '1'
tokio = {version = '1.4', features = ["net", "time", "macros", "rt"]}
ezlua = {path = ".", features = ['vendored', 'thread', 'async']}
mlua = {version = '0.8', features = ['lua54', 'vendored']}
serde = {version = '1.0', default-features = false, features = ['rc', 'derive']}

[build-dependencies]
cc = '1'
lua-src = { version = "546", optional = true }

[patch.crates-io]
lua-src = { git = "https://github.com/metaworm/lua-src-rs" }
